🚛 - Fix for headlines being too tall sometimes

--- a/src/scss/layout/_book.scss
+++ b/src/scss/layout/_book.scss
@@ -76,6 +76,7 @@
   }
   @include screen(lg) {
     grid-column: 4 / span 7;
+    max-height: 17rem;
   }
   img {
     width: 100%;
